@@ -1,3 +1,7 @@
+* Mon Oct 02 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 3.2.4-0
+- Fix bug in which svckill provider can fail on a server for which
+  there are are no aliased, SystemD services.
+
 * Fri Aug 18 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 3.2.3-0
 - Update concat version in metadata.json & build/rpm_metadata/requires
 
